--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2002-02-06  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* g++.dg/warn/weak1.C: Expect a warning from COFF toolchains,
+	and do not expect to be able to link the executable.
+
+        * g++.old-deja/g++.ext/attrib5.C: Expect the compilation to
+	fail because the COFF format does not support the weak attribute.
+
 2002-02-05  David Billinghurst <David.Billinghurst@riotinto.com>
 
 	* g77.dg/pr5473.f:  New test
