PR optimization/5429: 	* gcc.c-torture/compile/20020206-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49548 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-06  Jakub Jelinek  <jakub@redhat.com>
+
+	PR optimization/5429:
+	* gcc.c-torture/compile/20020206-1.c: New test.
+
 2002-02-06  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	* g++.dg/ext/align1.C: Do not use an explicit alignment value
