PR c/5482: 	* c-common.c (c_expand_expr) [STMT_EXPR]: If last expression is not 	EXPR_STMT, but COMPOUND_STMT, recurse into it.
	* gcc.c-torture/execute/20020206-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49549 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-06  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/5482:
+	* c-common.c (c_expand_expr) [STMT_EXPR]: If last expression is not
+	EXPR_STMT, but COMPOUND_STMT, recurse into it.
+
 2002-02-06  Richard Henderson  <rth@redhat.com>
 
 	* cfganal.c (keep_with_call_p): Source for fixed_reg dest must
