PR c/5420: 	* c-common.c (c_unsafe_for_reeval): Make COMPOUND_LITERAL_EXPR 	unsafe for reevaluation.
	* gcc.c-torture/execute/20020206-2.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49550 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -2,6 +2,8 @@
 
 	* gcc.c-torture/execute/20020206-1.c: New test.
 
+	* gcc.c-torture/execute/20020206-2.c: New test.
+
 	PR optimization/5429:
 	* gcc.c-torture/compile/20020206-1.c: New test.
 
