--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2002-02-06  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c/5420:
+	* c-common.c (c_unsafe_for_reeval): Make COMPOUND_LITERAL_EXPR
+	unsafe for reevaluation.
+
+2002-02-06  Jakub Jelinek  <jakub@redhat.com>
+
 	PR c/5482:
 	* c-common.c (c_expand_expr) [STMT_EXPR]: If last expression is not
 	EXPR_STMT, but COMPOUND_STMT, recurse into it.
