* config.gcc (s390x-*-linux*): Add t-linux64 makefile fragment. 	* config/s390/t-linux64: New file. 	* config/s390/libgcc-glibc.ver: New file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49553 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2002-02-06  Ulrich Weigand  <uweigand@de.ibm.com>
 
+	* config.gcc (s390x-*-linux*): Add t-linux64 makefile fragment.
+	* config/s390/t-linux64: New file.
+	* config/s390/libgcc-glibc.ver: New file.
+
+2002-02-06  Ulrich Weigand  <uweigand@de.ibm.com>
+
 	* config/s390/linux64.h: Delete file.
 	* config/s390/s390x.h: New file.
 	* config.gcc (s390x-*-linux*): Use s390x.h instead of linux64.h
