--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-06  Janis Johnson  <janis187@us.ibm.com>
+
+	* gcc.dg/20020206-1.c: New test.
+
 2002-02-06  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/execute/20020206-1.c: New test.
