--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-06  Mark Wielaard  <mark@klomp.org>
+
+	* verify.cc (verify_instructions_0) [op_dup2]: Actually push the
+	duplicate of a wide type.
+
 2002-02-06  Tom Tromey  <tromey@redhat.com>
 
 	* verify.cc (type::isnull): New method.
