PR c/5609         * stmt.c (resolve_operand_name_1): Take more care with mixed         named and unnamed operands.
        * gcc.dg/asm-4.c: Add case with an unnamed operand in the middle.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49560 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-06  Richard Henderson  <rth@redhat.com>
+
+	* gcc.dg/asm-4.c: Add case with an unnamed operand in the middle.
+
 2002-02-06  Janis Johnson  <janis187@us.ibm.com>
 
 	* gcc.dg/20020206-1.c: New test.
