--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-06  Richard Henderson  <rth@redhat.com>
+
+	PR c/5609
+	* stmt.c (resolve_operand_name_1): Take more care with mixed
+	named and unnamed operands.
+
 2002-02-06  Janis Johnson  <janis187@us.ibm.com>
 	    Jan Hubicka  <jh@suse.cz>
 
