2002-02-06  Adam Megacz <adam@xwt.org>
        * name-finder.h: don't #include sys/wait.h unless HAVE_SYS_WAIT_H


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49564 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-06  Adam Megacz <adam@xwt.org>
+
+	* name-finder.h: don't #include sys/wait.h unless HAVE_SYS_WAIT_H
+	
 2002-02-06  Anthony Green  <green@redhat.com>
 
 	* java/net/natPlainSocketImpl.cc: Fix DISABLE_JAVA_NET targets.
