--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-07  Alexandre Oliva  <aoliva@redhat.com>
+
+	* config/mips/mips.md (define_delay) [mips16]: Adjust required
+	length.
+
 2002-02-06  Richard Henderson  <rth@redhat.com>
 
 	PR c/5609
