--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-07  Richard Henderson  <rth@redhat.com>
+
+	* alias.c (find_base_value): Recall base values for fixed hard regs.
+	* loop.c (loop_regs_update): Don't use single_set on non-insns.
+
 2002-02-07  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config/mips/mips.md (define_delay) [mips16]: Adjust required
