--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-07  David Billinghurst <David.Billinghurst@riotinto.com>
+
+	PR fortran/3743
+	* g77.f-torture/execute/intrinsic-unix-bessel.f: Remove
+	unsupported cases.
+
 2002-02-07  Richard Henderson  <rth@redhat.com>
 
 	* gcc.dg/debug/dwarf2-1.c: Update for return warnings.
