* MAINTAINERS: Put self in as maintainer for x86-64 port. 	Remove self as Write After Approval.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49575 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Feb  7 12:40:58 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* MAINTAINERS: Put self in as maintainer for x86-64 port.
+	Remove self as Write After Approval.
+
 2002-01-31  Geoffrey Keating  <geoffk@redhat.com>
 
 	* MAINTAINERS: Put self in as maintainer for contrib/regression
