--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-07  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* testsuite/gcc.dg/cpp/charconst-2.c: Add -fsigned-char option.
+
 Thu Feb  7 12:14:17 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386-protos.h (x86_order_regs_for_local_alloc): Declare
