2002-02-07  H.J. Lu <hjl@gnu.org>
	* config/mips/linux.h (SUBTARGET_ASM_DEBUGGING_SPEC): Defined.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49580 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-07  H.J. Lu <hjl@gnu.org>
+
+	* config/mips/linux.h (SUBTARGET_ASM_DEBUGGING_SPEC): Defined.
+
 2002-02-07  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* testsuite/gcc.dg/cpp/charconst-2.c: Add -fsigned-char option.
