--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-07  Jeff Sturm  <jsturm@one-point.com>
+
+	* config/sparc/sparc.c (compute_frame_size): Don't correct frame
+	offset for stack bias.
+
 2002-02-07  H.J. Lu <hjl@gnu.org>
 
 	* config/mips/linux.h (SUBTARGET_ASM_DEBUGGING_SPEC): Defined.
