* java/lang/natThrowable.cc: Updated copyright. 	* java/io/natFileWin32.cc: Updated copyright. 	* java/io/natFileDescriptorWin32.cc: Updated copyright. 	* win32-threads.cc: Updated copyright. 	* name-finder.cc: Updated copyright. 	* include/name-finder.h: Updated copyright.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49586 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,12 @@
 2002-02-07  Tom Tromey  <tromey@redhat.com>
 
+	* java/lang/natThrowable.cc: Updated copyright.
+	* java/io/natFileWin32.cc: Updated copyright.
+	* java/io/natFileDescriptorWin32.cc: Updated copyright.
+	* win32-threads.cc: Updated copyright.
+	* name-finder.cc: Updated copyright.
+	* include/name-finder.h: Updated copyright.
+
 	* include/name-finder.h: Conditionally include sys/wait.h.
 	* include/config.h.in: Rebuilt.
 
