* gcj.texi (Input Options): --CLASSPATH does not suppress system 	path.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49588 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-07  Tom Tromey  <tromey@redhat.com>
+
+	* gcj.texi (Input Options): --CLASSPATH does not suppress system
+	path.
+
 2002-02-04  Anthony Green  <green@redhat.com>
 
 	* class.c (build_utf8_ref): Put UTF-8 constants into merged
