--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,12 @@
+2002-02-07  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/109
+	* decl.c (grokdeclarator): Allow friend declarations from
+	dependant types.
+	* decl2.c (handle_class_head): Don't push into template parm contexts.
+	* pt.c (push_template_decl_real): Template parm contexts are never
+	being defined.
+
 2002-02-05  Alexandre Oliva  <aoliva@redhat.com>
 
 	* class.c: Include target.h.
