--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-07  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/template/friend4.C: New test.
+
 2002-02-07  David Billinghurst <David.Billinghurst@riotinto.com>
 
 	PR fortran/3743
