* g++.old-deja/g++.brendan/new2.C: Arrange for allocated memory         to be sufficiently aligned for integers.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49592 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-07  Richard Henderson  <rth@redhat.com>
+
+	* g++.old-deja/g++.brendan/new2.C: Arrange for allocated memory
+	to be sufficiently aligned for integers.
+
 2002-02-07  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/template/friend4.C: New test.
