Fix for string-opt-7 failure on rs6000 -maix64.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49593 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-02-07  Tom Rix  <trix@redhat.com>
+
+	* config/rs6000/rs6000.c (reg_or_aligned_short_operand): New. For 
+	immediates in ldu and stdu DS opcode field.
+	* config/rs6000/rs6000.md (movdi_update, movdi_update1): Use.
+	* config/rs6000/rs6000-protos.h: Add reg_or_aligned_short_operand.
+	* config/rs6000/rs6000.h (PREDICATE_CODES): Same.
+
 2002-02-07  Jeff Sturm  <jsturm@one-point.com>
 
 	* config/sparc/sparc.c (compute_frame_size): Don't correct frame
