--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -9173,7 +9173,7 @@
 (define_insn "*movdi_update1"
   [(set (match_operand:DI 3 "gpc_reg_operand" "=r,r")
 	(mem:DI (plus:DI (match_operand:DI 1 "gpc_reg_operand" "0,0")
-			 (match_operand:DI 2 "reg_or_short_operand" "r,I"))))
+			 (match_operand:DI 2 "reg_or_aligned_short_operand" "r,I"))))
    (set (match_operand:DI 0 "gpc_reg_operand" "=b,b")
 	(plus:DI (match_dup 1) (match_dup 2)))]
   "TARGET_POWERPC64 && TARGET_UPDATE"
@@ -9195,7 +9195,7 @@
 
 (define_insn "movdi_update"
   [(set (mem:DI (plus:DI (match_operand:DI 1 "gpc_reg_operand" "0,0")
-			 (match_operand:DI 2 "reg_or_short_operand" "r,I")))
+			 (match_operand:DI 2 "reg_or_aligned_short_operand" "r,I")))
 	(match_operand:DI 3 "gpc_reg_operand" "r,r"))
    (set (match_operand:DI 0 "gpc_reg_operand" "=b,b")
 	(plus:DI (match_dup 1) (match_dup 2)))]
@@ -15323,7 +15323,7 @@
 	(eq:SI (reg:CC 74)
 	       (const_int 0)))]
   "TARGET_ALTIVEC"
-  "")
+  "")	
 
 (define_expand "cr6_test_for_zero_reverse"
   [(set (match_operand:SI 0 "register_operand" "=r")
