--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-07  David Billinghurst <David.Billinghurst@riotinto.com>
+
+	PR fortran/5473
+	* g77.dg/pr5473.f: Now dg-error.  Add additional cases.  
+
 2002-02-07  Richard Henderson  <rth@redhat.com>
 
 	* g++.old-deja/g++.brendan/new2.C: Arrange for allocated memory
@@ -9,7 +14,7 @@
 
 2002-02-07  David Billinghurst <David.Billinghurst@riotinto.com>
 
-	PR fortran/3743
+	PR fortran/5743
 	* g77.f-torture/execute/intrinsic-unix-bessel.f: Remove
 	unsupported cases.
 
