--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-07  Richard Henderson  <rth@redhat.com>
+
+	* cfgrtl.c: Include recog.h and insn-config.h.
+	(keep_with_call_p): Fix general_operand invocation.
+	* Makefile.in (cfgrtl.o): Update dependencies.
+
 2002-02-07  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.c (two_insn_adds_subs_operand): Revise a
