* HACKING: Fix URL for the automake-gcj.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49600 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-08  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* HACKING: Fix URL for the automake-gcj.
+
 2002-02-07  Tom Tromey  <tromey@redhat.com>
 
 	* java/lang/natThrowable.cc: Updated copyright.
