--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-07  David O'Brien  <obrien@FreeBSD.org>
+
+	* config/sparc/freebsd.h: Fix mismatched spec {.
+
 2002-02-07  Richard Henderson  <rth@redhat.com>
 
 	* cfgrtl.c: Include recog.h and insn-config.h.
