Reformatted a changelog entry
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49604 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -58,8 +58,8 @@
 
 2002-02-06  Adam Megacz <adam@xwt.org>
 
-	* shs.h, shs.cc, natSimpleSHSStream.cc: use uint<n>_t instead
-	of LONG and BYTE
+	* gnu/gcj/io/shs.h, gnu/gcj/io/shs.cc, gnu/gcj/io/natSimpleSHSStream.cc:
+	use uint<n>_t instead of LONG and BYTE
 	
 2002-02-06  Adam Megacz <adam@xwt.org>
 
