* gcc.dg/debug/dwarf2-1.c (foo): Return a value.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49605 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-07  Richard Henderson  <rth@redhat.com>
+
+	* gcc.dg/debug/dwarf2-1.c (foo): Return a value.
+
 2002-02-07  David Billinghurst <David.Billinghurst@riotinto.com>
 
 	* lib/prune.exp: Remove "In (program|subroutine"block-data)"
