* loop.c (strength_reduce): Sink final_value when not         eliminating a biv.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49606 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-07  Richard Henderson  <rth@redhat.com>
+
+	* loop.c (strength_reduce): Sink final_value when not
+	eliminating a biv.
+
 2002-02-07  David O'Brien  <obrien@FreeBSD.org>
 
 	* config/sparc/freebsd.h: Fix mismatched spec {.
