* c-common.c (c_expand_expr): Revert 2002-02-06 patch. 	* c-parse.in (compstmt): Clear last_expr_type.
	* parse.y (primary, primary_no_id): Use compstmt_or_stmtexpr
	instead of compstmt.
	(compstmt_or_stmtexpr): Renamed from compstmt.
	(compstmt): In addition to compstmt_or_stmtexpr clear last_expr_type.

	* gcc.c-torture/execute/20020206-1.c: Test whether nesting 2
	expression statements work instead.
	* gcc.dg/noncompile/20020207-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49609 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2002-02-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* parse.y (primary, primary_no_id): Use compstmt_or_stmtexpr
+	instead of compstmt.
+	(compstmt_or_stmtexpr): Renamed from compstmt.
+	(compstmt): In addition to compstmt_or_stmtexpr clear last_expr_type.
+
 2002-02-07  Nathan Sidwell  <nathan@codesourcery.com>
 
 	Rename instantiate_type_flags to tsubst_flags_t & expand use.
