--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/execute/20020206-1.c: Test whether nesting 2
+	expression statements work instead.
+	* gcc.dg/noncompile/20020207-1.c: New test.
+
 2002-02-07  Richard Henderson  <rth@redhat.com>
 
 	* gcc.dg/debug/dwarf2-1.c (foo): Return a value.
