* config.gcc (x86_64-*-linux): Add t-linux64 makefile fragment. 	* config/i386/t-linux64: New file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49610 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-08  Andreas Jaeger  <aj@suse.de>
+
+	* config.gcc (x86_64-*-linux): Add t-linux64 makefile fragment.
+	* config/i386/t-linux64: New file.
+
 2002-02-08  Jakub Jelinek  <jakub@redhat.com>
 
 	* c-common.c (c_expand_expr): Revert 2002-02-06 patch.
