2002-02-08  Martin Kahlert  <martin.kahlert@infineon.com>
	* jni.cc (_Jv_JNI_NewLocalRef): Make sure, that NULL frame is not
	dereferenced.
	(_Jv_JNI_AttachCurrentThread): Produce full featured env->locals
	frame.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49615 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2002-02-08  Martin Kahlert  <martin.kahlert@infineon.com>
+
+	* jni.cc (_Jv_JNI_NewLocalRef): Make sure, that NULL frame is not
+	dereferenced.
+	(_Jv_JNI_AttachCurrentThread): Produce full featured env->locals
+	frame.
+
 2002-02-07  Tom Tromey  <tromey@redhat.com>
 
 	* java/io/natFile.cc (_access): Use __builtin_alloca.
