* snapshot-index.html: Improve markup.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49617 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-08  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* snapshot-index.html: Improve markup.
+
 2002-01-29  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* snapshot-README, snapshot-index.html: Use expressions such as
