2002-02-08  Chris Demetriou  <cgd@broadcom.com>
	* MAINTAINERS: Belatedly add myself to write after approval list.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49618 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-08  Chris Demetriou  <cgd@broadcom.com>
+
+	* MAINTAINERS: Belatedly add myself to write after approval list.
+
 Thu Feb  7 12:40:58 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* MAINTAINERS: Put self in as maintainer for x86-64 port.
