--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-08  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc_release: Substitute dates in snapshot-README and
+	snapshot-index.html files rather than directly using the old files
+	on the FTP site.  Set QMAILHOST.
+
 2002-02-08  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* snapshot-index.html: Improve markup.
