--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-08  David Edelsohn  <edelsohn@gnu.org>
+
+	* doc/invoke.texi (RS/6000 and PowerPC Options): Fix typo.
+
 2002-02-08  Richard Henderson  <rth@redhat.com>
 
 	* config/alpha/elf.h (ASM_OUTPUT_ALIGNED_BSS): New.
