* interpret.cc (convert): New function. 	(continue1) [insn_d2i, insn_d2l, insn_f2i, insn_f2l]: Use 	convert. 	Include Long.h.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49621 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2002-02-08  Tom Tromey  <tromey@redhat.com>
+
+	* interpret.cc (convert): New function.
+	(continue1) [insn_d2i, insn_d2l, insn_f2i, insn_f2l]: Use
+	convert.
+	Include Long.h.
+
 2002-02-08  Anthony Green  <green@redhat.com>
 
 	* configure.host: Add support for xscale-elf embedded target.
