--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-08  Richard Henderson  <rth@redhat.com>
+
+	* gcc.c-torture/compile/labels-3.c: New.
+
 2002-02-08  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/execute/20020206-1.c: Test whether nesting 2
