2002-02-07  Chris Demetriou  <cgd@broadcom.com>
        * config/mips/mips.md (casesi_internal_di): Calculate
        the index into the target offset table correctly.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49623 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-07  Chris Demetriou  <cgd@broadcom.com>
+
+	* config/mips/mips.md (casesi_internal_di): Calculate
+	the index into the target offset table correctly.
+
 2002-02-08  Richard Henderson  <rth@redhat.com>
 
 	* expr.c (expand_expr): Mind EXPAND_INITIALIZER for truncation also.
