2002-02-08  Chris Demetriou  <cgd@broadcom.com>
        * config/mips/mips.md (casesi_internal, casesi_internal_di):
        Protect jump delay slot instructions with .set noreorder and
        .set nomacro.

[Also, fix date on my previous checkin to the ChangeLog file.  It
should have been today's date.]


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49624 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,10 @@
-2002-02-07  Chris Demetriou  <cgd@broadcom.com>
+2002-02-08  Chris Demetriou  <cgd@broadcom.com>
+
+        * config/mips/mips.md (casesi_internal, casesi_internal_di):
+        Protect jump delay slot instructions with .set noreorder and
+        .set nomacro.
+
+2002-02-08  Chris Demetriou  <cgd@broadcom.com>
 
 	* config/mips/mips.md (casesi_internal_di): Calculate
 	the index into the target offset table correctly.
