--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -106,6 +106,7 @@ Thu Feb  7 12:14:17 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 2002-02-07  Richard Henderson  <rth@redhat.com>
 
+	PR optimization/2463
 	* alias.c (find_base_value): Recall base values for fixed hard regs.
 	* loop.c (loop_regs_update): Don't use single_set on non-insns.
 
